test/expected/shellcheck_nullary_test.out
[CompoundList]
  [CompoundListCondition, None]
    [SimpleCommand "[" "$x" "]"]
  [CompoundListCondition, None]
    [SimpleCommand "[" "-n" "$x" "]"]
[Word
  Unquoted "["
]
[Word
  Variable "x"
]
[Word
  Unquoted "]"
]
[Word
  Unquoted "["
]
[Word
  Unquoted "-n"
]
[Word
  Variable "x"
]
[Word
  Unquoted "]"
]
shit: 2:3: warning: A one-operand test is the nonempty-string test.
     2 |  [ "$x" ]
       |    ^~~~ here.
note: Write it with -n to read clearer.
shit: 2:3: error: Unable to expand 'x' because the parameter is not set.
     2 |  [ "$x" ]
       |    ^~~~ here.
